--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,15 +1,17 @@
 .main-container {
-display: flex;
-flex-direction: column;
-gap: 1rem;
-  width: 40rem;
-  padding: 2rem;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+  width: 73rem;
+  padding: 2.5rem;
+  border-radius: 0.5rem;
 }
 
 .header {
   display: flex;
   align-items: center;
-  gap: 4rem;
+  gap: 40rem;
 }
 
 .header-title {
@@ -20,6 +22,15 @@ gap: 1rem;
   letter-spacing: 0px;
   display: flex;
   gap: 1rem;
+}
+
+.mark-title {
+color: darkgray;
+font-weight: 500;
+font-style: Medium;
+font-size: 1.6rem;
+line-height: 100%;
+text-align: right;
 }
 
 .not-counter {
