--- a/src/components/Notification.css
+++ b/src/components/Notification.css
@@ -1,13 +1,14 @@
-.notification-container {
+.notifications-container {
+    width: 100%;
     display: flex;
     align-items: center;
+    margin-top: 1rem;
 
 }
 
 .not-image {
     width: 4.5rem;
     height: 4.5rem;
- 
     opacity: 1;
     border-width: 1px;
 
@@ -22,15 +23,58 @@
 
 }
 .notification {
-width: 67rem;
+background-color: aliceblue;
+width: 100%;
+height: 8rem;
 display: flex;
-flex-direction: row;
 gap: 1rem; 
 align-items: center;
+border-radius: 0.5rem;
+padding: 1rem;
 }
 
 .description {
-    display: flex;
-   
+    cursor: pointer;
 }
+.span-description {
+color: #5E6778;
+font-weight: 500;
+font-style: Medium;
+font-size: 1.6rem;
+line-height: 100%;
+}
+
+.not-description {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+.not-post {
+color: #5E6778;
+font-weight: 800;
+font-style: ExtraBold;
+font-size: 1.6rem;
+line-height: 100%;
+}
+
+.not-time {
+color: grey;
+font-weight: 500;
+font-style: Medium;
+font-size: 1.6rem;
+line-height: 100%;
+
+}
+
+.red-circle {
+    background-color: red;
+    width: 0.8rem;
+    height: 0.8rem;
+    border-radius: 50%;
+
+
+
+}
+    
 
