--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:wght@300;400;600&display=swap');
 
-
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
+  background-color: aliceblue;
   margin: 0;
   display: flex;
-  
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
